// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Checkbox /> layout renders Checkbox 1`] = `
<div
  className="mfui-beta-checkbox mfui-beta-checkbox_font-size_regular mfui-beta-checkbox_color_dark"
>
  <div
    className="mfui-beta-checkbox__inner"
  >
    <label
      className="mfui-beta-checkbox__label mfui-beta-checkbox__label_no-touch"
    >
      <input
        checked={false}
        className="mfui-beta-checkbox__input"
        onChange={[Function]}
        type="checkbox"
      />
      <div
        className="mfui-beta-checkbox__custom-input"
      >
        <test-file-stub
          className="mfui-beta-checkbox__icon"
        />
      </div>
      Тестовая строка
    </label>
  </div>
</div>
`;

exports[`<Checkbox /> layout renders Checkbox on mobile resolution 1`] = `
<div
  className="mfui-beta-checkbox mfui-beta-checkbox_font-size_regular mfui-beta-checkbox_color_dark"
>
  <div
    className="mfui-beta-checkbox__inner"
  >
    <label
      className="mfui-beta-checkbox__label"
    >
      <input
        checked={false}
        className="mfui-beta-checkbox__input"
        onChange={[Function]}
        type="checkbox"
      />
      <div
        className="mfui-beta-checkbox__custom-input"
      >
        <test-file-stub
          className="mfui-beta-checkbox__icon"
        />
      </div>
      Тестовая строка на мобильном разрешении
    </label>
  </div>
</div>
`;

exports[`<Checkbox /> layout renders Checkbox with props 1`] = `
<div
  className="mfui-beta-checkbox mfui-beta-checkbox_font-size_small mfui-beta-checkbox_color_light mfui-beta-checkbox_checked mfui-beta-checkbox_disabled mfui-beta-checkbox_error testClassName"
>
  <div
    className="mfui-beta-checkbox__inner"
  >
    <label
      className="mfui-beta-checkbox__label mfui-beta-checkbox__label_no-touch"
    >
      <input
        checked={true}
        className="mfui-beta-checkbox__input"
        disabled={true}
        name="testInputName"
        onChange={[Function]}
        type="checkbox"
        value="testInputValue"
      />
      <div
        className="mfui-beta-checkbox__custom-input"
      >
        <test-file-stub
          className="mfui-beta-checkbox__icon"
        />
      </div>
      Тестовая строка
    </label>
    <span
      className="mfui-beta-checkbox__extra-content"
    >
      text
    </span>
  </div>
</div>
`;
